Fixed links, etc.

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -27,9 +27,8 @@
         <footer>
             <nav>
                 <a href="https://webpages.charlotte.edu/pchapin/">Home Page</a> ||
-                <a href="https://github.com/Puzzle5/">GitHub Profile</a> ||
-                <a href="https://github.com/Puzzle5/Puzzle5">GitHub Project</a> ||
-                <a href="https://github.com/Puzzle5/Puzzle5/tree/main/itis3135">GitHub IO Page</a> ||
+                <a href="https://puzzle5.github.io/">GitHub Page</a> ||
+                <a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a> ||
                 <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
                 <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
                 <p>Designed by Playful Cats Enterprises, © 2025</p>
