--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -44,20 +44,21 @@
             </ul>
         </section>
         <footer>
-            <a href="https://webpages.charlotte.edu/pchapin/">Home Page</a> ||
-            <a href="https://github.com/Puzzle5/">GitHub Profile</a> ||
-            <a href="https://github.com/Puzzle5/Puzzle5">GitHub Project</a> ||
-            <a href="https://github.com/Puzzle5/Puzzle5/tree/main/itis3135">GitHub IO Page</a> ||
-            <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
-            <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
-            <p>Designed by Playful Cats Enterprises, © 2025</p>
-            <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-                <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-            </a>
-            <script>
-                document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-            </script>
+            <nav>
+                <a href="https://webpages.charlotte.edu/pchapin/">Home Page</a> ||
+                <a href="https://puzzle5.github.io/">GitHub Page</a> ||
+                <a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a> ||
+                <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
+                <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
+                <p>Designed by Playful Cats Enterprises, © 2025</p>
+                <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+                    <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+                </a>
+                <script>
+                    document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+                    document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+                </script>
+            </nav>
         </footer>
     </body>
 </html>
