--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,15 +7,15 @@
         <title>
             Playful Cats || ITIS-3135 || Homepage
         </title>
+        <link rel="stylesheet" href="styles/default.css">
     </head>
     <body>
-
         <header>
             <h1>Playful Cats || ITIS-3135</h1>
             <nav>
                 <a href="./">Home</a>
                 ||
-                <a href="indroduction.html">Introduction</a>
+                <a href="introduction.html">Introduction</a>
                 ||
                 <a href="contract.html">Contract</a>
             </nav>
