--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>I'm Puzzle5 and this is the root of my website.</h1>
-
-        <p><a href = "https://github.com/Puzzle5/puzzle5">GitHub</a></p>
+        <p><a href = "https://puzzle5.github.io/">GitHub Page</a></p>
         <p><a href = "itis3135/">Click to go to ITIS3135 Site</a></p>
     </body>
 </html>
