--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -26,11 +26,12 @@
         </main>
         <section>
             <ul>
-                <li><strong>Personal Background:</strong> </li>
-                <li><strong>Professional Background:</strong> </li>
+                <li><strong>Personal Background:</strong> I like making video games.</li>
+                <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
                 <li><strong>Academic Background:</strong> </li>
-                <li><strong>Background in  this Subject:</strong> </li>
-                <li><strong>Primary Computer Platform:</strong> </li>
+                <li><strong>Background in  this Subject:</strong> Used to design websites in the 90's/2000's.  Hated it.  Now it's a requirement for my degree.</li>
+                <li><strong>Primary Computer Platform:</strong> Linux</li>
+                <li><strong>Courses I'm Taking and Why:</strong></li>
                     <ul>
                         <li><strong>ITIS-3135 - Intro To Web Design:</strong>Major requirement</li>
                         <li><strong>ITIS-3200 - Intro To Cybersecurity and Privacy:</strong>Major requirement</li>
@@ -39,8 +40,6 @@
                         <li><strong>MATH-1241 - Calculus I:</strong>Major requirement</li>
                         <li><strong>ITSC-1212 - Intro To Computers:</strong>Originally exempt, but now forced to take it</li>
                     </ul>
-                <li><strong>Courses I'm Taking and Why:</strong>
-                </li>
             </ul>
         </section>
         <footer>
