--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><strong>Personal Background:</strong> I like making video games.</li>
                 <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
-                <li><strong>Academic Background:</strong> </li>
+                <li><strong>Academic Background:</strong> In and out of college, due to circumstances.  Now trying to finish the degree.</li>
                 <li><strong>Background in  this Subject:</strong> Used to design websites in the 90's/2000's.  Hated it.  Now it's a requirement for my degree.</li>
                 <li><strong>Primary Computer Platform:</strong> Linux</li>
                 <li><strong>Courses I'm Taking and Why:</strong></li>
