--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -25,7 +25,7 @@
             <p>This is my Playful Cats website.</p>
         </main>
         <section>
-            <p><img src="images/PlayfulCat.png" alt="Playful Cat">
+            <p><img src="images/PlayfulCat.png" alt="Playful Cat"></p>
             <ul>
                 <li><strong>Personal Background:</strong> I like making video games.</li>
                 <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
