--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta chartype="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-        <title>Hi</title>
+        <title>Proud Cobra || Home</title>
+        <<link rel="stylesheet" href="styles/default.css">>
     </head>
     <body>
-        <h1>I'm Puzzle5 and this is the root of my website.</h1>
-        <p><a href = "https://puzzle5.github.io/">GitHub Page</a></p>
-        <p><a href = "itis3135/">Click to go to ITIS3135 Site</a></p>
+        <header id="header">
+            <h1>I'm Proud Cobra, and this is the root of my website.</h1>
+        </header>
+        <main id="main">
+            <h2>Test</h2>
+            <p></p>
+        </main>
+        <footer id="footer">
+            <nav>
+                <ul>
+                    <li><a href = "https://puzzle5.github.io/" target="_blank">GitHub Page</a></li>
+                    <li><a href = "itis3135/">Click to go to ITIS3135 Site</a></li>
+                    <li><a href = "about:blank">No LinkedIn</a></li>
+                </ul>
+            </nav>
+            <script>
+                document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+                document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+            </script>
+        </footer>
     </body>
 </html>
