--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         <title>
-            Playful Cats || ITIS-3135 || Homepage
+            Proud Cobra || ITIS-3135 || Homepage
         </title>
         <link rel="stylesheet" href="styles/default.css">
     </head>
     <body>
         <header>
-            <h1>Playful Cats || ITIS-3135</h1>
+            <h1>Proud Cobra || ITIS-3135</h1>
             <nav>
                 <a href="./">Home</a>
                 ||
@@ -22,10 +22,10 @@
         </header>
         <main>
             <h2>Introduction</h2>
-            <p>This is my Playful Cats website.</p>
+            <p>This is my Proud Cobra website.</p>
         </main>
         <section>
-            <p><img src="images/PlayfulCat.png" alt="Playful Cat"></p>
+            <p><img src="images/ProudCobra.png" alt="Proud Cobra"></p>
             <ul>
                 <li><strong>Personal Background:</strong> I like making video games.</li>
                 <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
@@ -50,7 +50,7 @@
                 <a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a> ||
                 <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
                 <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
-                <p>Designed by Playful Cats Enterprises, © 2025</p>
+                <p>Designed by Playful Cats Enterprises, © 2025 || Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
                     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
                 </a>
