--- a/index.html
+++ b/index.html
@@ -5,7 +5,107 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         <title>Proud Cobra || Home</title>
-        <<link rel="stylesheet" href="styles/default.css">>
+        <style>
+        selector {
+    /** Base colors */
+    --clr-dark-a0: #000000:
+    --clr-light-a0: #ffffff;
+    /** Dark theme primary colors */
+
+    --clr-primary-a0: #91ad82;
+    --clr-primary-a10: #9db68f;
+    --clr-primary-a20: #a9bf9d;
+    --clr-primary-a30: #b5c8aa;
+    --clr-primary-a40: #c1d1b8;
+    --clr-primary-a50: #cddac6;
+
+    /** Dark theme surface colors */
+
+    --clr-surface-a0: #121212;
+    --clr-surface-a10: #282828;
+    --clr-surface-a20: #3f3f3f;
+    --clr-surface-a30: #575757;
+    --clr-surface-a40: #717171;
+    --clr-surface-a50: #8b8b8b;
+
+    /** Dark theme tonal surface colors */
+
+    --clr-surface-tonal-a0: #1d201c;
+    --clr-surface-tonal-a10: #323531;
+    --clr-surface-tonal-a20: #484b47;
+    --clr-surface-tonal-a30: #60625f;
+    --clr-surface-tonal-a40: #787a77;
+    --clr-surface-tonal-a50: #919391;
+
+}
+
+a {
+	color: #FFFFFF;
+}
+
+body {
+	color: #ffffff;
+	background-color: #121212;
+	margin: 0;
+}
+header, main, section, footer {
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 20px;
+	max-width: 750px;
+	background-color: #282828;
+}
+main, header, nav {
+	align-content: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+nav {
+	margin-left: auto;
+	margin-right: auto;
+	padding: 20px;
+	background-color: #282828;
+}
+
+/*nav {
+  width: 50%;
+  max-width: 300px;
+  height: 50px;
+}*/
+
+nav > ul {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
+}
+
+nav > ul > li {
+  color: #dfdfe2;
+  margin: 0 0.2rem;
+  padding: 0.2rem;
+  display: block;
+}
+
+nav > ul > li:hover {
+  background-color: #dfdfe2;
+  color: #1b1b32;
+  cursor: pointer;
+}
+
+li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+        </style>
     </head>
     <body>
         <header id="header">
