More assignment requirements fulfilled

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         <title>Proud Cobra || Home</title>
         <style>
-        selector {
+        :root {
     /** Base colors */
     --clr-dark-a0: #000000:
     --clr-light-a0: #ffffff;
@@ -109,18 +109,24 @@ li > a {
     </head>
     <body>
         <header id="header">
-            <h1>I'm Proud Cobra, and this is the root of my website.</h1>
+            <h1>I'm Proud Cobra...</h1>
         </header>
         <main id="main">
-            <h2>Test</h2>
-            <p></p>
+            <h2>...and this is the root of my website.</h2>
+            <p>Below, you can navigate to my class projects.</p>
         </main>
         <footer id="footer">
             <nav>
                 <ul>
-                    <li><a href = "https://puzzle5.github.io/" target="_blank">GitHub Page</a></li>
+                    <li><a href = "https://github.com/Puzzle5/puzzle5.github.io" target="_blank">GitHub.com</a></li>
+                    <li>||</li>
+                    <li><a href="https://webpages.charlotte.edu/pchapin/" target="_blank">Home Page</a></li>
+                    <li>||</li>
+                    <li><a href = "https://puzzle5.github.io/" target="_blank">GitHub.io</a></li>
+                    <li>||</li>
                     <li><a href = "itis3135/">Click to go to ITIS3135 Site</a></li>
-                    <li><a href = "about:blank">No LinkedIn</a></li>
+                    <li>||</li>
+                    <li><a href = "about:blank" target="_blank">[No LinkedIn]</a></li>
                 </ul>
             </nav>
             <script>
