--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         <title>
-            Proud Cobra || ITIS-3135 || Homepage
+            Proud Cobra || ITIS-3135 || Contract
         </title>
         <link rel="stylesheet" href="styles/default.css">
     </head>
