--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -13,25 +13,36 @@
         <header>
             <h1>Proud Cobra || ITIS-3135</h1>
             <nav>
-                <a href="./">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="contract.html">Contract</a>
+                <ul>
+                    <li><a href="./">Home</a></li>
+                    <li>||</li>
+                    <li><a href="introduction.html">Introduction</a></li>
+                    <li>||</li>
+                    <li><a href="contract.html">Contract</a></li>
+                </ul>
             </nav>
         </header>
         <main>
-            <h2>ITIS-3135</h2>
+            <h2>ITIS-3135 Home</h2>
             <p>This is all the content for my ITIS-3135 class</p>
         </main>
         <footer>
             <nav>
-                <a href="https://webpages.charlotte.edu/pchapin/">Home Page</a> ||
-                <a href="https://puzzle5.github.io/">GitHub Page</a> ||
-                <a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a> ||
-                <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
-                <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
-                <p>Designed by Playful Cats Enterprises, © 2025 || Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
+                <ul>
+                    <li><a href="https://webpages.charlotte.edu/pchapin/">Home Page</a></li>
+                    <li>||</li>
+                    <li><a href="https://puzzle5.github.io/">GitHub Page</a></li>
+                    <li>||</li>
+                    <li><a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a></li>
+                    <li>||</li>
+                    <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
+                    <li>||</li>
+                    <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
+                </ul>
+                <ul>
+                <li><p id="copyright">Designed by Playful Cats Enterprises, © 2025</li>
+                <li>||</li>
+                <li><p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p></li>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
                     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
                 </a>
