--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -10,16 +10,7 @@
         <link rel="stylesheet" href="styles/default.css">
     </head>
     <body>
-        <header>
-            <h1>Proud Cobra || ITIS-3135</h1>
-            <nav>
-                <a href="./">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="contract.html">Contract</a>
-            </nav>
-        </header>
+        <div data-include="components/header.html"></div>
         <main>
             <h2>Introduction</h2>
             <p>This is my Proud Cobra website.</p>
@@ -43,22 +34,7 @@
                     </ul>
             </ul>
         </section>
-        <footer>
-            <nav>
-                <a href="https://webpages.charlotte.edu/pchapin/">Home Page</a> ||
-                <a href="https://puzzle5.github.io/">GitHub Page</a> ||
-                <a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a> ||
-                <a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a> ||
-                <a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a>
-                <p>Designed by Playful Cats Enterprises, © 2025 || Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
-                <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-                    <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-                </a>
-                <script>
-                    document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                    document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-                </script>
-            </nav>
-        </footer>
+        <div data-include="components/footer.html"></div>
+        <script src="scripts/include.min.js"></script>
     </body>
 </html>
