--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header class="header">
-        <h1>Proud Cobra || ITIS-3135</h1>
+        <h1>Proud Cobra Minerals, inc.</h1>
+        <p class="teal-text">"We Serenade the Stone, and It Sings Back."</p>
         <nav>
             <ul>
                 <li><a href="./">Home</a></li>
@@ -21,9 +22,16 @@
         </nav>
     </header>
     <main class="main">
-        <h2>Proud Cobra Minerals, inc. || About</h2>
-        <p class="teal-text">"We Serenade the Stone, and It Sings Back."</p>
+        <h2>About Our Company</h2>
+        <p></p>
     </main>
+
+    <section class="section">
+        <div>Deep within the earth's crust, where glittering geodes whisper secrets to the patient stone, lies Proud Cobra Minerals, inc., a company less concerned with brute extraction and more with coaxing the earth's treasures into the light. Picture a team of geologists who carry magnifying glasses and teacups, pausing their seismic readings for a spot of Earl Grey. Their mining equipment isn't just drills and dynamite; it's a collection of enchanted trowels, crystal-tuned sonic hammers, and gentle, earthworm-powered conveyor belts.</div>
+
+        <div>Instead of blasting, they prefer to "serenade" the minerals, using harmonious frequencies to loosen the gemstones and ores from their rocky slumber. Their process involves a bit of geological gardening, carefully tending to the mineral veins like prize-winning petunias. Each extracted crystal is polished with moonbeams and whispered affirmations, ensuring it carries only the purest, most cheerful vibrations. Their company mascot? A fluffy mole named "Bartholomew," who has an uncanny knack for sniffing out the most sparkly finds. Earthbloom Minerals doesn't just mine; they perform a delicate dance with the earth, leaving behind not scars, but blooming crystal gardens and the gentle hum of happy geology.</div>
+    </section>
+
     <div class="profile-container">
         <div class="profile-image">
             <img src="images/sy3zk8sy3zk8sy3z.jpg" alt="Bartholomew Profile">
@@ -32,19 +40,13 @@
             <h2>Meet Bartholomew</h2>
             <p>Bartholomew is the heart and soul of Proud Cobra Minerals, inc. With his keen sense of smell and cheerful thumbs-up, he's always ready to find the next sparkly treasure. He's not just a mole; he's a symbol of our commitment to gentle, joyful mining.</p>
             <p>He enjoys long walks in the tunnels, sniffing out rare minerals, and the occasional earthworm snack. His infectious enthusiasm brings a smile to everyone's face.</p>
+            <blockquote class="bartholomew-quote">
+                "Every sparkle tells a story." - Bartholomew
+            </blockquote>
         </div>
-    </div>
-
-    <div class="profile-bottom-text">
-        "Every sparkle tells a story." - Bartholomew
     </div>
     <div class="gap-div"></div>
 
-    <section class="section">
-        Deep within the earth's crust, where glittering geodes whisper secrets to the patient stone, lies Proud Cobra Minerals, inc., a company less concerned with brute extraction and more with coaxing the earth's treasures into the light. Picture a team of geologists who carry magnifying glasses and teacups, pausing their seismic readings for a spot of Earl Grey. Their mining equipment isn't just drills and dynamite; it's a collection of enchanted trowels, crystal-tuned sonic hammers, and gentle, earthworm-powered conveyor belts.
-
-        Instead of blasting, they prefer to "serenade" the minerals, using harmonious frequencies to loosen the gemstones and ores from their rocky slumber. Their process involves a bit of geological gardening, carefully tending to the mineral veins like prize-winning petunias. Each extracted crystal is polished with moonbeams and whispered affirmations, ensuring it carries only the purest, most cheerful vibrations. Their company mascot? A fluffy mole named "Bartholomew," who has an uncanny knack for sniffing out the most sparkly finds. Earthbloom Minerals doesn't just mine; they perform a delicate dance with the earth, leaving behind not scars, but blooming crystal gardens and the gentle hum of happy geology.
-    </section>
     <div class="gap-div"></div>
     <footer class="footer">
         <nav>
@@ -59,10 +61,10 @@
                 <li>||</li>
                 <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
             </ul>
-            <ul>
-                <li><p id="copyright">Designed by Playful Cats Enterprises, © 2025</p></li>
-                <li>||</li>
-                <li><p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p></li>
+            <div class="footer-bottom-links">
+                <span>Designed by Playful Cats Enterprises, © 2025</span>
+                <span>||</span>
+                <span>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></span>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
                     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
                 </a>
@@ -70,7 +72,7 @@
                     document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
                     document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
                 </script>
-            </ul>
+            </div>
         </nav>
     </footer>
 </body>
