--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -50,21 +50,9 @@
     <div class="gap-div"></div>
     <footer class="footer">
         <nav>
-            <ul>
-                <li><a href="https://webpages.charlotte.edu/pchapin/">Home Page</a></li>
-                <li>||</li>
-                <li><a href="https://puzzle5.github.io/">GitHub Page</a></li>
-                <li>||</li>
-                <li><a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a></li>
-                <li>||</li>
-                <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
-                <li>||</li>
-                <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
-            </ul>
             <div class="footer-bottom-links">
-                <span>Designed by Playful Cats Enterprises, © 2025</span>
-                <span>||</span>
-                <span>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></span>
+                <span>Proud Cobra Minerals, inc. &copy; 2025</span>
+                <span>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
                     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
                 </a>
