--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -15,9 +15,7 @@
             <ul>
                 <li><a href="./">Home</a></li>
                 <li>||</li>
-                <li><a href="introduction.html">Introduction</a></li>
-                <li>||</li>
-                <li><a href="contract.html">Contract</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +49,7 @@
     <footer class="footer">
         <nav>
             <div class="footer-bottom-links">
-                <span>Proud Cobra Minerals, inc. &copy; 2025</span>
+                <span>Proud Cobra Minerals, inc. &copy;ff 2025</span>
                 <span>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
                     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
