Calling the whimsical site good.

--- a/whimsical/about.html
+++ b/whimsical/about.html
@@ -19,11 +19,11 @@
             </ul>
         </nav>
     </header>
+    <div class="header-main-gap"></div>
     <main class="main">
         <h2>About Our Company</h2>
         <p></p>
     </main>
-
     <section class="section">
         <div>Deep within the earth's crust, where glittering geodes whisper secrets to the patient stone, lies Proud Cobra Minerals, inc., a company less concerned with brute extraction and more with coaxing the earth's treasures into the light. Picture a team of geologists who carry magnifying glasses and teacups, pausing their seismic readings for a spot of Earl Grey. Their mining equipment isn't just drills and dynamite; it's a collection of enchanted trowels, crystal-tuned sonic hammers, and gentle, earthworm-powered conveyor belts.</div>
 
@@ -43,8 +43,6 @@
             </blockquote>
         </div>
     </div>
-    <div class="gap-div"></div>
-
     <div class="gap-div"></div>
     <footer class="footer">
         <nav>
