--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -15,8 +15,8 @@
             <h2>Introduction</h2>
             <p>This is my Proud Cobra website.</p>
         </main>
-        <section>
-            <p><img src="images/ProudCobra.png" alt="Proud Cobra"></p>
+        <section class="introduction-section">
+            <img src="images/ProudCobra.png" alt="Proud Cobra">
             <ul>
                 <li><strong>Personal Background:</strong> I like making video games.</li>
                 <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
