Fixed CSS error

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,7 +23,7 @@
                 <li><strong>Academic Background:</strong> In and out of college, due to circumstances.  Now trying to finish the degree.</li>
                 <li><strong>Background in  this Subject:</strong> Used to design websites in the 90's/2000's.  Hated it.  Now it's a requirement for my degree.</li>
                 <li><strong>Primary Computer Platform:</strong> Linux</li>
-                <li><strong>Courses I'm Taking and Why:</strong></li>
+                <li><strong>Courses I'm Taking and Why:</strong>
                     <ul>
                         <li><strong>ITIS-3135 - Intro To Web Design:</strong> Major requirement</li>
                         <li><strong>ITIS-3200 - Intro To Cybersecurity and Privacy:</strong> Major requirement</li>
@@ -32,6 +32,7 @@
                         <li><strong>MATH-1241 - Calculus I:</strong> Major requirement</li>
                         <li><strong>ITSC-1212 - Intro To Computers:</strong> Originally exempt, but now forced to take it</li>
                     </ul>
+                </li>
             </ul>
         </section>
         <div data-include="components/footer.html"></div>
