--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -12,11 +12,14 @@
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Introduction</h2>
+        <h2>Proud Cobra || Introduction</h2>
         <p>This is my Proud Cobra website.</p>
     </main>
     <section class="introduction-section">
-        <img src="images/ProudCobra.png" alt="Proud Cobra">
+        <figure>
+            <img src="images/ProudCobra.png" alt="Proud Cobra">
+            <figcaption>Proud Cobra</figcaption>
+        </figure>
         <ul>
             <li><strong>Personal Background:</strong> I like making video games.</li>
             <li><strong>Professional Background:</strong> Lots of hours doing volunteer IT work.</li>
