--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,21 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <title>
-        Proud Cobra || ITIS-3135 || Introduction
-    </title>
+    <title>Proud Cobra || ITIS-3135 || Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
     <div data-include="components/header.html"></div>
     <main>
-        <h2>Proud Cobra || Introduction</h2>
+        <h2>Introduction</h2>
         <p>This is my Proud Cobra website.</p>
     </main>
     <section class="introduction-section">
         <figure>
             <img src="images/ProudCobra.png" alt="Proud Cobra">
-            <figcaption>Proud Cobra</figcaption>
+            <figcaption>Proud Cobra Logo</figcaption>
         </figure>
         <ul>
             <li><strong>Personal Background:</strong> I like making video games.</li>
@@ -38,6 +36,10 @@
             </li>
         </ul>
     </section>
+    <div class="footer-items">
+        <p>&copy; 2024 Proud Cobra</p>
+        <p><a href="https://validator.w3.org/check?uri=referer">Valid HTML5</a></p>
+    </div>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.min.js"></script>
 </body>
