--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -12,8 +12,9 @@
     <body>
         <div data-include="components/header.html"></div>
         <main>
-            <h2>ITIS-3135 Home</h2>
+            <h2>Home</h2>
             <p>This is all the content for my ITIS-3135 class</p>
+            <p>You can read more about me <a href="introduction.html">here</a>.</p>
         </main>
         <div data-include="components/footer.html"></div>
         <script src="scripts/include.min.js"></script>
