--- a/hobby/index.html
+++ b/hobby/index.html
@@ -23,6 +23,30 @@
     <main>
         <section id="what">
             <h2>What is Urban Sketching?</h2>
+            <p>Urban sketching is the practice of drawing on location, capturing the essence of the places and moments that surround you. It's about documenting life as it happens, directly from observation, rather than working from photos or imagination in a studio.</p>
+
+            <p>Here's a breakdown of what that means:</p>
+
+            <ul>
+                <li><strong>On Location:</strong>
+                    <p>Urban sketchers draw wherever they are: city streets, parks, cafes, public events, their own homes, or while traveling. The key is to be present and capture the scene directly.</p>
+                </li>
+                <li><strong>Observation:</strong>
+                    <p>It's about seeing the world around you with a fresh perspective. Urban sketchers pay attention to details, light, shadows, and the flow of everyday life.</p>
+                </li>
+                <li><strong>Documentation:</strong>
+                    <p>Urban sketches serve as a visual diary, recording personal experiences and the unique character of a place and time.</p>
+                </li>
+                <li><strong>Various Mediums:</strong>
+                    <p>Urban sketchers use a wide range of tools, including pencils, pens, ink, watercolors, markers, and digital devices. The medium is less important than the act of sketching.</p>
+                </li>
+                <li><strong>Community:</strong>
+                    <p>While it can be a solitary pursuit, urban sketching also fosters a strong sense of community. Sketchers often meet up to draw together, share their work online, and participate in sketch crawls.</p>
+                </li>
+            </ul>
+
+            <p>In essence, urban sketching is a way to connect with your environment, express your creativity, and create a visual record of your experiences. It's about seeing the beauty in the ordinary and capturing the fleeting moments of everyday life.</p>
+
             <figure>
                 <img src="images/sketch1.jpg" alt="A busy street scene captured in a sketch.">
                 <figcaption>A sketch of a vibrant market square.</figcaption>
@@ -32,6 +56,12 @@
 
         <section id="who" class="hidden">
             <h2>Who are Urban Sketchers?</h2>
+            <p>Urban sketchers are a diverse and passionate group of individuals who share a love for drawing on location. They come from all walks of life, including professional artists, architects, designers, students, and hobbyists. What unites them is the desire to capture the world around them through sketching.</p>
+
+            <p>You'll find urban sketchers sketching solo in quiet corners, or in bustling groups at organized 'sketch crawls.' They might be capturing the intricate details of a historic building, the lively atmosphere of a market, or a simple, everyday moment in a park.</p>
+
+            <p>The urban sketching community is incredibly welcoming and inclusive. There are local groups and online communities where sketchers share their work, offer tips and encouragement, and organize events. Whether you're a seasoned artist or a complete beginner, you'll find a place within the urban sketching community.</p>
+
             <figure>
                 <img src="images/sketch2.jpg" alt="A group of people sketching in a park.">
                 <figcaption>A group of sketchers capturing a park scene.</figcaption>
@@ -41,6 +71,25 @@
 
         <section id="when" class="hidden">
             <h2>When to Sketch?</h2>
+            <p>Urban sketching isn't bound by strict schedules or specific times. The beauty of it lies in its flexibility – you can sketch whenever and wherever inspiration strikes.</p>
+
+            <ul>
+                <li><strong>Any Time of Day:</strong>
+                    <p>Early mornings offer soft light and quiet streets, perfect for capturing architectural details. Midday brings vibrant colors and bustling activity, ideal for sketching lively scenes. Evenings and nights offer unique lighting challenges and atmospheric shadows.</p>
+                </li>
+                <li><strong>Any Season:</strong>
+                    <p>Each season brings its own visual delights, from blooming flowers in spring to snowy landscapes in winter. Don't let weather deter you; rainy days can add a unique mood to your sketches.</p>
+                </li>
+                <li><strong>Everyday Moments:</strong>
+                    <p>Sketch during your commute, lunch break, or while waiting for an appointment. Travel is a fantastic opportunity to document your experiences through sketching.</p>
+                </li>
+                <li><strong>Organized Events:</strong>
+                    <p>Join local sketch crawls, meetups, and workshops to sketch with fellow enthusiasts. Participate in online challenges and events to stay motivated and inspired.</p>
+                </li>
+            </ul>
+
+            <p>The best time to sketch is whenever you have the urge to capture a moment. Keep a sketchbook and your favorite tools handy, and you'll always be ready to sketch.</p>
+
             <figure>
                 <img src="images/sketch3.jpg" alt="A sketch of a sunset over a city skyline.">
                 <figcaption>A sunset sketch over the cityscape.</figcaption>
@@ -50,6 +99,34 @@
 
         <section id="where" class="hidden">
             <h2>Where to Sketch?</h2>
+            <p>The world is your studio when it comes to urban sketching! Inspiration can be found in the most unexpected places.</p>
+
+            <ul>
+                <li><strong>City Streets:</strong>
+                    <p>Capture the hustle and bustle of busy intersections, the charm of quiet alleyways, or the grandeur of iconic landmarks.</p>
+                </li>
+                <li><strong>Parks and Gardens:</strong>
+                    <p>Sketch nature's beauty, from sprawling landscapes to intricate botanical details.</p>
+                </li>
+                <li><strong>Cafes and Restaurants:</strong>
+                    <p>Document the cozy atmosphere, the people enjoying their meals, or the architectural details of the interior.</p>
+                </li>
+                <li><strong>Public Spaces:</strong>
+                    <p>Sketch at markets, train stations, museums, and libraries, capturing the flow of people and the unique character of each space.</p>
+                </li>
+                <li><strong>Your Own Neighborhood:</strong>
+                    <p>Discover hidden gems and appreciate the familiar sights from a new perspective.</p>
+                </li>
+                <li><strong>While Traveling:</strong>
+                    <p>Urban sketching is a fantastic way to document your travel experiences and create lasting memories.</p>
+                </li>
+                <li><strong>Anywhere and Everywhere:</strong>
+                    <p>Don't limit yourself! Any location that sparks your interest is a potential sketching spot.</p>
+                </li>
+            </ul>
+
+            <p>The key is to be observant and find the beauty in your surroundings, no matter where you are.</p>
+
             <figure>
                 <img src="images/sketch4.jpg" alt="A sketch of a cozy cafe interior.">
                 <figcaption>A cozy cafe interior sketch.</figcaption>
@@ -59,6 +136,34 @@
 
         <section id="how" class="hidden">
             <h2>How to Start Urban Sketching?</h2>
+            <p>Getting started with urban sketching is easier than you might think! Here's a breakdown of the 'how-to':</p>
+
+            <ul>
+                <li><strong>Gather Basic Supplies:</strong>
+                    <p>A sketchbook (any size or type that you prefer). A pen or pencil (a waterproof pen is ideal for adding watercolor later). Optional: watercolors, markers, colored pencils, or any other medium you enjoy.</p>
+                </li>
+                <li><strong>Start Simple:</strong>
+                    <p>Begin with quick sketches of simple subjects, like a building's facade or a single object. Focus on capturing the overall shapes and composition rather than intricate details.</p>
+                </li>
+                <li><strong>Practice Observation:</strong>
+                    <p>Pay attention to light and shadow, perspective, and the relationships between objects. Look for interesting angles and viewpoints.</p>
+                </li>
+                <li><strong>Sketch Regularly:</strong>
+                    <p>The more you sketch, the better you'll become. Try to sketch at least a little bit every day, even if it's just for a few minutes.</p>
+                </li>
+                <li><strong>Don't Fear Mistakes:</strong>
+                    <p>Urban sketching is about capturing the moment, not creating perfect artwork. Embrace imperfections and learn from them.</p>
+                </li>
+                <li><strong>Join the Community:</strong>
+                    <p>Connect with other urban sketchers online or in person. Share your work, get feedback, and learn from others.</p>
+                </li>
+                <li><strong>Experiment:</strong>
+                    <p>Try different mediums, techniques, and subjects. Find your own style and have fun!</p>
+                </li>
+            </ul>
+
+            <p>The most important thing is to just start sketching. Don't worry about being perfect; enjoy the process of capturing the world around you.</p>
+
             <figure>
                 <img src="images/sketch5.jpg" alt="A sketch of various art supplies laid out on a table.">
                 <figcaption>A collection of urban sketching supplies.</figcaption>
@@ -68,6 +173,37 @@
 
         <section id="why" class="hidden">
             <h2>Why Urban Sketch?</h2>
+            <p>Why should you try urban sketching? There are countless reasons, but here are a few compelling ones:</p>
+
+            <ul>
+                <li><strong>Enhances Observation Skills:</strong>
+                    <p>Urban sketching trains you to see the world with greater attention to detail, improving your observational abilities.</p>
+                </li>
+                <li><strong>Fosters Creativity:</strong>
+                    <p>It provides an outlet for creative expression and allows you to develop your own unique artistic style.</p>
+                </li>
+                <li><strong>Creates Lasting Memories:</strong>
+                    <p>Urban sketches serve as a visual journal, preserving memories of places and experiences in a personal and meaningful way.</p>
+                </li>
+                <li><strong>Promotes Mindfulness:</strong>
+                    <p>The act of sketching encourages you to slow down, be present, and appreciate the beauty in everyday life.</p>
+                </li>
+                <li><strong>Builds Community:</strong>
+                    <p>Urban sketching connects you with a global community of like-minded individuals, fostering friendships and support.</p>
+                </li>
+                <li><strong>Reduces Stress:</strong>
+                    <p>Sketching can be a relaxing and therapeutic activity, helping to reduce stress and promote well-being.</p>
+                </li>
+                <li><strong>Improves Drawing Skills:</strong>
+                    <p>Regular practice through urban sketching leads to significant improvements in your drawing abilities.</p>
+                </li>
+                <li><strong>Connects You with Your Environment:</strong>
+                    <p>It helps you appreciate the architecture, the people and the atmosphere of your surroundings.</p>
+                </li>
+            </ul>
+
+            <p>Ultimately, urban sketching is a rewarding hobby that enriches your life in many ways. It's a way to see the world differently, capture its beauty, and create a lasting record of your experiences.</p>
+
             <figure>
                 <img src="images/sketch6.jpg" alt="A sketch of a person drawing in a sketchbook outdoors.">
                 <figcaption>A person sketching outdoors.</figcaption>
@@ -77,13 +213,28 @@
 
         <section id="ai" class="hidden">
             <h2>AI Prompts</h2>
+            <p>The images used in this project were generated using AI. Here's a concise list of the prompts that were provided:</p>
             <ul>
-                <li>Prompt 1: A detailed sketch of a busy European market square, with people and stalls, in a watercolor style.</li>
-                <li>Prompt 2: A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style.</li>
-                <li>Prompt 3: A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style.</li>
-                <li>Prompt 4: An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style.</li>
-                <li>Prompt 5: A flat lay of various urban sketching supplies, including pens, pencils, watercolors, and a sketchbook, in a clean and organized style.</li>
-                <li>Prompt 6: A person sitting on a bench, sketching in a sketchbook outdoors, capturing a street scene, in a dynamic and expressive style.</li>
+                <li>"A detailed sketch of a busy European market square, with people and stalls, in a watercolor style."</li>
+                <li>"A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style."</li>
+                <li>"A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style."</li>
+                <li>"An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style."</li>
+                <li>"A flat lay of various urban sketching supplies, including pens, pencils, watercolors, and a sketchbook, in a clean and organized style."</li>
+                <li>"A person sitting on a bench, sketching in a sketchbook outdoors, capturing a street scene, in a dynamic and expressive style."</li>
+                <li>"A simple line drawing illustrating someone sketching a city street scene in a notebook."</li>
+                <li>"A watercolor sketch of a person sitting on a park bench, drawing a bustling city square in their sketchbook, capturing the vibrant atmosphere."</li>
+                <li>"A digital sketch showing a diverse range of people drawing on location, capturing architectural details and everyday moments in a city."</li>
+                <li>"A close-up sketch of a hand holding a pencil and a sketchbook, capturing the act of urban sketching in progress."</li>
+                <li>"A series of small sketches showing the progression of an urban sketch, from quick lines to finished artwork."</li>
+                <li>"A vintage-style pen and ink sketch of a person sketching a historic building in a city."</li>
+                <li>"A modern, minimalist sketch of a person drawing a cityscape using simple geometric shapes."</li>
+                <li>"Use a pencil and sketch an urban scene."</li>
+                <li>"Sketch another one."</li>
+                <li>"Excellent. And another."</li>
+                <li>"Good, good. And another one."</li>
+                <li>"Give me one more."</li>
+                <li>"And now sketch yourself."</li>
+
             </ul>
         </section>
 
