Fixed some image descriptions to match the image itself

--- a/hobby/index.html
+++ b/hobby/index.html
@@ -50,7 +50,7 @@
             <figure>
                 <img src="images/sketch1.jpg" alt="A busy street scene captured in a sketch.">
                 <figcaption>A sketch of a vibrant market square.</figcaption>
-                <p class="prompt"><i>Prompt: A detailed sketch of a busy European market square, with people and stalls, in a watercolor style.</i></p>
+                <p class="prompt"><i>Prompt: Sketch an urban scene</i></p>
             </figure>
         </section>
 
@@ -64,8 +64,8 @@
 
             <figure>
                 <img src="images/sketch2.jpg" alt="A group of people sketching in a park.">
-                <figcaption>A group of sketchers capturing a park scene.</figcaption>
-                <p class="prompt"><i>Prompt: A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style.</i></p>
+                <figcaption>Urban people going about their day.</figcaption>
+                <p class="prompt"><i>Prompt: Another one.</i></p>
             </figure>
         </section>
 
@@ -92,8 +92,8 @@
 
             <figure>
                 <img src="images/sketch3.jpg" alt="A sketch of a sunset over a city skyline.">
-                <figcaption>A sunset sketch over the cityscape.</figcaption>
-                <p class="prompt"><i>Prompt: A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style.</i></p>
+                <figcaption>bustling urban life.</figcaption>
+                <p class="prompt"><i>Prompt: Excellent.  And Another.</i></p>
             </figure>
         </section>
 
@@ -129,8 +129,8 @@
 
             <figure>
                 <img src="images/sketch4.jpg" alt="A sketch of a cozy cafe interior.">
-                <figcaption>A cozy cafe interior sketch.</figcaption>
-                <p class="prompt"><i>Prompt: An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style.</i></p>
+                <figcaption>A busy intersection.</figcaption>
+                <p class="prompt"><i>Prompt: Another.</i></p>
             </figure>
         </section>
 
@@ -166,8 +166,8 @@
 
             <figure>
                 <img src="images/sketch5.jpg" alt="A sketch of various art supplies laid out on a table.">
-                <figcaption>A collection of urban sketching supplies.</figcaption>
-                <p class="prompt"><i>Prompt: A flat lay of various urban sketching supplies, including pens, pencils, watercolors, and a sketchbook, in a clean and organized style.</i></p>
+                <figcaption>Street corner.</figcaption>
+                <p class="prompt"><i>Prompt: One more.</i></p>
             </figure>
         </section>
 
@@ -207,7 +207,7 @@
             <figure>
                 <img src="images/sketch6.jpg" alt="A sketch of a person drawing in a sketchbook outdoors.">
                 <figcaption>A person sketching outdoors.</figcaption>
-                <p class="prompt"><i>Prompt: A person sitting on a bench, sketching in a sketchbook outdoors, capturing a street scene, in a dynamic and expressive style.</i></p>
+                <p class="prompt"><i>Prompt: I need another sketch.</i></p>
             </figure>
         </section>
 
@@ -215,7 +215,7 @@
             <h2>AI Prompts</h2>
             <p>The images used in this project were generated using AI. Here's a concise list of the prompts that were provided:</p>
             <ul>
-                <li>"A detailed sketch of a busy European market square, with people and stalls, in a watercolor style."</li>
+                <li>"Give me a basic "</li>
                 <li>"A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style."</li>
                 <li>"A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style."</li>
                 <li>"An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style."</li>
