Changed AI prompt section

--- a/hobby/index.html
+++ b/hobby/index.html
@@ -215,26 +215,13 @@
             <h2>AI Prompts</h2>
             <p>The images used in this project were generated using AI. Here's a concise list of the prompts that were provided:</p>
             <ul>
-                <li>"Give me a basic "</li>
-                <li>"A group of diverse people sitting and sketching in a sunny park, using various art supplies, in a hand-drawn style."</li>
-                <li>"A vibrant sunset over a city skyline, captured in a quick sketch using warm colors, in an impressionistic style."</li>
-                <li>"An interior sketch of a cozy cafe with warm lighting, filled with people, in a detailed pen and ink style."</li>
-                <li>"A flat lay of various urban sketching supplies, including pens, pencils, watercolors, and a sketchbook, in a clean and organized style."</li>
-                <li>"A person sitting on a bench, sketching in a sketchbook outdoors, capturing a street scene, in a dynamic and expressive style."</li>
-                <li>"A simple line drawing illustrating someone sketching a city street scene in a notebook."</li>
-                <li>"A watercolor sketch of a person sitting on a park bench, drawing a bustling city square in their sketchbook, capturing the vibrant atmosphere."</li>
-                <li>"A digital sketch showing a diverse range of people drawing on location, capturing architectural details and everyday moments in a city."</li>
-                <li>"A close-up sketch of a hand holding a pencil and a sketchbook, capturing the act of urban sketching in progress."</li>
-                <li>"A series of small sketches showing the progression of an urban sketch, from quick lines to finished artwork."</li>
-                <li>"A vintage-style pen and ink sketch of a person sketching a historic building in a city."</li>
-                <li>"A modern, minimalist sketch of a person drawing a cityscape using simple geometric shapes."</li>
-                <li>"Use a pencil and sketch an urban scene."</li>
-                <li>"Sketch another one."</li>
-                <li>"Excellent. And another."</li>
-                <li>"Good, good. And another one."</li>
-                <li>"Give me one more."</li>
-                <li>"And now sketch yourself."</li>
-
+                <li>"Give me a basic HTML page with the CRAP principles."</li>
+                <li>"Generate a hobby."</li>
+                <li>"Give me a number of sections, with Who, What When Where, Why, and How, and give me descriptions for each."</li>
+                <li>"Hide each section unless the link is clicked on."</li>
+                <li>(A series of basic prompts to correct the AI's misunderstandings, telling them their code wasn't working, asking for the code again since it got cut off due to max length restrictions, etc.)</li>
+                <li>"Generate an urban sketch drawn with a pencil."</li>
+                <li>(From here, just said, "Another one", until I had the quota.)</li>
             </ul>
         </section>
 
