--- a/hobby/index.html
+++ b/hobby/index.html
@@ -228,11 +228,9 @@
     </main>
 
     <footer>
-        <p>Designed by [Your Design Firm Name]</p>
+        <p><a href>Designed by Proud Cobra Enterprises</a></p>
         <p>
-            <button onclick="window.location.href='http://validator.w3.org/check?uri=' + window.location.href">HTML</button>
-            <button onclick="window.location.href='http://jigsaw.w3.org/css-validator/validator?uri=' + window.location.href">CSS</button>
-            <button onclick="window.open('https://wave.webaim.org/report#/https://webpages.charlotte.edu/UNCCID/itis3135/hobby/index.html', '_blank')">Accessibility</button>
+            <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         </p>
     </footer>
 
